# tiro

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXPORT_SCHEMA.md  PRODUCT_ROADMAP.md  PROJECT_TIRO_SPEC.md  README.md  SECURITY.md  VISION.md  config.example.yaml  pyproject.toml  run.py
.github/workflows/: ci.yml  docker.yml
deploy/docker/: docker-compose.sync-test.yml  docker-compose.yml
desktop/: README.md
desktop/pyinstaller/: entry.py  smoke.sh  tiro-server.spec
desktop/tauri/: package-lock.json  package.json
desktop/tauri/dist-placeholder/: index.html
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/icons/: icon.icns
desktop/tauri/src-tauri/src/: main.rs
docs/: RUNBOOK-desktop.md
extension/: background.js  lib.js  lib.test.mjs  manifest.json  popup.html  popup.js
playwright-tests/: README.md  annotations.spec.js  design-pass.spec.js  package.json  phase0.spec.js  save-queue.spec.js  snooze-ui.spec.js  swipe-triage.spec.js  telemetry.spec.js  triage-pill.spec.js
scripts/: export_anchor_fixtures.mjs  make_icons.py  seed_articles.py
tests/: conftest.py  sync_conformance.py  test_agents_api.py  test_agents_golden.py  test_agents_runtime.py  test_analysis_routes.py  test_anchors.py  test_annotations.py  test_annotations_api.py  test_audit.py  test_audit_deferrals.py  test_auth.py  test_authors.py  test_backup.py  test_classify.py  test_config_env.py  test_contradiction.py  test_delete.py  test_device_pairing.py  test_digest_routes.py  test_doctor.py  test_evals.py  test_export.py  test_feeds_api.py  test_feeds_page.py  test_frontend_modules.py  test_healthz.py  test_highlight_recap.py  test_highlights_views.py  test_import_api.py  test_import_highlights.py  test_importer.py  test_importers.py  test_inbox_library_view.py  test_ingest_highlight.py  test_ingest_hooks.py  test_ingestion.py  test_ingestion_smoke.py  test_lan_banner.py  test_libmove_banner.py  (+75 more)
tests/fixtures/: hostile.eml  newsletter.eml  sync-crypto-parity.json  sync-journal-golden.jsonl
tests/fixtures/feeds/: billion_laughs.xml  hostile.opml  nested.opml  truncated_junk.xml  valid_atom.xml  valid_rss.xml
tests/fixtures/imports/: instapaper.csv  readwise.json
tiro/: __init__.py  anchors.py  annotations.py  app.py  audit.py  auth.py  authors.py  backup.py  cli.py  config.py  database.py  decay.py  doctor.py  export.py  importer.py  library_move.py  lifecycle.py  llm.py  llm_cli.py  mdns.py  migrations.py  model_cache.py  opml.py  paths.py  queries.py  sanitize.py  scheduler.py  service.py  snooze.py  stats.py  suggestions.py  tags.py  tls.py  tts.py  update_check.py  vectorstore.py  wiki.py  wiki_gen.py
tiro/agents/: __init__.py  base.py  context.py  hooks.py  personas.py  registry.py  runtime.py
tiro/agents/builtin/: __init__.py  contradiction_detector.py  digest_writer.py  ingenuity_analyst.py  metadata_extractor.py  preference_classifier.py
tiro/api/: routes_agents.py  routes_annotations.py  routes_articles.py  routes_audio.py  routes_auth.py  routes_authors.py  routes_backup.py  routes_classify.py  routes_digest.py  routes_digest_email.py  routes_export.py  routes_feeds.py  routes_filters.py  routes_graph.py  routes_import.py  routes_ingest.py  routes_personas.py  routes_remote.py  routes_sessions.py  routes_settings.py  routes_setup.py  routes_sources.py  routes_sync.py  routes_tokens.py  routes_views.py  routes_wiki.py
tiro/evals/: __init__.py  runner.py
tiro/evals/contradiction-detector/: fixtures.jsonl
tiro/evals/digest_writer/: fixtures.jsonl
tiro/evals/ingenuity_analyst/: fixtures.jsonl
tiro/evals/metadata_extractor/: fixtures.jsonl
tiro/evals/preference_classifier/: fixtures.jsonl
tiro/frontend/static/: app.js  manifest.webmanifest  reader.js  sources.js  styles.css  sw.js  wiki.js
tiro/frontend/templates/: _icons.html  agents.html  base.html  digest.html  feeds.html  graph.html  highlights.html  inbox.html  login.html  offline.html  qr_setup.html  reader.html  remote_setup.html  settings.html  sources.html  stats.html  welcome.html  wiki.html  wiki_page.html
tiro/ingestion/: email.py  extractors.py  imap.py  processor.py  rss.py  web.py
tiro/ingestion/importers/: __init__.py  base.py  instapaper.py  omnivore.py  readwise.py
tiro/intelligence/: analysis.py  digest.py  email_digest.py  preferences.py  prompts.py
tiro/intelligence/templates/: connection_notes.txt  contradiction_check.txt  daily_digest.txt  extract_metadata.txt  highlight_recap.txt  ingenuity_analysis.txt  learned_preferences.txt  persona_daily_themes.md  persona_devils_advocate.md  persona_research_brief.md  wiki_page.txt  wiki_schema_default.md
tiro/mcp/: server.py
tiro/onboarding/: __init__.py  cicero-to-tiro.md  welcome-to-tiro.md
tiro/search/: semantic.py
tiro/sync/: crypto.py  engine.py  journal.py  manifest.py  merge.py  reconcile.py  snapshot.py
tiro/sync/adapters/: __init__.py  base.py  filesystem.py  s3.py  webdav.py
(+37 files in other folders)
