[package]
name = "tiro-desktop"
version = "0.7.0"
description = "Tauri desktop shell for Tiro — a native window managing the PyInstaller-frozen server as a sidecar."
authors = ["Tiro contributors"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
